# kcf

./: CMakeLists.txt  Makefile  gaussianProf.py  main_vot.cpp  runProf.sh
src/: CMakeLists.txt  complexmat.cu  complexmat.hpp  cufft_callback.cu  debug.cpp  debug.h  dynmem.hpp  fft.cpp  fft.h  fft_cufft.cpp  fft_cufft.h  fft_fftw.cpp  fft_fftw.h  fft_opencv.cpp  fft_opencv.h  gaussiancorrelation.cu  kcf.cpp  kcf.h  pragmas.h  threadctx.hpp
src/sched-util/: profCUDA.cpp  profCUDA.hpp  utility_func.cu  utility_func.cuh  utility_host.cpp  utility_host.hpp
